@@ -87,7 +87,7 @@ Make sure you are logged in as root and MySQL is running.
 6. Copy all the directories into your system. If you have not yet, now is a good
    time to make backups of your server. The following steps do fundamental
    changes to your system configuration.
-	# cp -Rv /tmp/ispcp/* /
+	# cp -R /tmp/ispcp/* /
 
 7. Change or create MySQL root password, remove anonymous users, disallow root
 	login remotely, remove test database (and access to it), reload privilege tables.
@@ -161,7 +161,8 @@ Make sure you are logged in as root and MySQL is running.
 	# cp -R /tmp/ispcp/usr/* /usr/
 	# cp -R /tmp/ispcp/var/* /var/
 
-8. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
+8. Backup ispcp.conf and copy the /etc directory into your system (you may make 
+   backups):
 	# mv /etc/ispcp/ispcp.conf /etc/ispcp/ispcp.old.conf
 	# cp -R /tmp/ispcp/etc/* /etc/
 
