@@ -540,17 +540,19 @@ function get_user_props($user_id) {
 	$sub_current = get_domain_running_sub_cnt($sql, $user_id);
 	$sub_max = $data['domain_subd_limit'];
 
-	$als_current = records_count( 'domain_aliasses', 'domain_id', $user_id);
+	$als_current = records_count('domain_aliasses', 'domain_id', $user_id);
 	$als_max = $data['domain_alias_limit'];
 
 	if (Config::get('COUNT_DEFAULT_EMAIL_ADDRESSES')) {
-		$mail_current = records_count( 'mail_users', 'domain_id', $user_id);
+		// Catch all is not a mailbox and haven't to be count - TheCry
+		$mail_current = records_count('mail_users', 'mail_type NOT RLIKE \'_catchall\' AND domain_id', $user_id);
 	} else {
 		$where = "`mail_acc` != 'abuse'
 		AND `mail_acc` != 'postmaster'
 		AND `mail_acc` != 'webmaster'
-		AND `domain_id`";
-		$mail_current = records_count( 'mail_users', $where, $user_id);
+		AND `domain_id`
+		AND `mail_type` NOT RLIKE '_catchall'";
+		$mail_current = records_count('mail_users', $where, $user_id);
 	}
 	$mail_max = $data['domain_mailacc_limit'];
 
@@ -568,7 +570,7 @@ function get_user_props($user_id) {
 
 	$ftp_max = $data['domain_ftpacc_limit'];
 
-	$sql_db_current = records_count( 'sql_database', 'domain_id', $user_id);
+	$sql_db_current = records_count('sql_database', 'domain_id', $user_id);
 	$sql_db_max = $data['domain_sqld_limit'];
 
 	$sql_user_current = get_domain_running_sqlu_acc_cnt($sql, $user_id);
