@@ -18,6 +18,7 @@ ispCP ω 1.0.4 Changelog
 		* Fixed #2151: Adding user and exceeding mail account from reseller won't work correct
 		* Fixed #2153: Changing userlogo upload and deleting userlogo won't work
 		* Fixed #2154: Reseller Overview shows -1 if function is disabled
+		* Fixed #2157: Admin Option "Count default E-Mail addresses" work not correct
 
 2010-01-12 Laurent Declercq
 	- GUI:
